<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/fragment_box_color"
    tools:context="com.example.jetnavapp.BoxFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_a_box"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"/>

    <Button
        android:id="@+id/openSecretBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_secret"/>

    <Button
        android:id="@+id/generateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_number"/>

</LinearLayout>