<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.example.jetnavapp.SecretFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/secret_place"
        android:textSize="25sp"
        android:fontFamily="casual"/>

    <Button
        android:id="@+id/closeSecretBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_secret"/>

    <Button
        android:id="@+id/closeTheBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_the_whole_box"/>

</LinearLayout>